--- a/tao may tinh don gian/aaa.html
+++ b/tao may tinh don gian/aaa.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="aaaaaa.css">
+
 </head>
 <body>
-<form name="calculator">
+<form >
     <table>
         <tr>
             <td colspan="4">
@@ -14,28 +15,28 @@
             </td>
         </tr>
         <tr>
-            <td><input type="button" name="one" value="1" onclick="calculator.display.value += 1"></td>
-            <td><input type="button" name="two" value="2" onclick="calculator.display.value += 2"></td>
-            <td><input type="button" name="three" value="3" onclick="calculator.display.value += 3"></td>
-            <td><input type="button" class="operator" name="plus" value="+" onclick="calculator.display.value += '+'"></td>
+            <td><input type="button" value="1" onclick="display.value += 1"></td>
+            <td><input type="button" value="2" onclick="display.value += 2"></td>
+            <td><input type="button" value="3" onclick="display.value += 3"></td>
+            <td><input type="button" value="+" onclick="display.value += '+'"></td>
         </tr>
         <tr>
-            <td><input type="button" name="four" value="4" onclick="calculator.display.value += 4"></td>
-            <td><input type="button" name="five" value="5" onclick="calculator.display.value += 5"></td>
-            <td><input type="button" name="six" value="6" onclick="calculator.display.value += 6"></td>
-            <td><input type="button" class="operator" name="minus" value="-" onclick="calculator.display.value += '-'"></td>
+            <td><input type="button" value="4" onclick="display.value += 4"></td>
+            <td><input type="button" value="5" onclick="display.value += 5"></td>
+            <td><input type="button" value="6" onclick="display.value += 6"></td>
+            <td><input type="button" value="-" onclick="display.value += '-'"></td>
         </tr>
         <tr>
-            <td><input type="button" name="seven" value="7" onclick="calculator.display.value += 7"></td>
-            <td><input type="button" name="eight" value="8" onclick="calculator.display.value += 8"></td>
-            <td><input type="button" name="nine" value="9" onclick="calculator.display.value += 9"></td>
-            <td><input type="button" class="operator" name="times" value="x" onclick="calculator.display.value += '*'"></td>
+            <td><input type="button" value="7" onclick="display.value += 7"></td>
+            <td><input type="button" value="8" onclick="display.value += 8"></td>
+            <td><input type="button" value="9" onclick="display.value += 9"></td>
+            <td><input type="button" value="x" onclick="display.value += '*'"></td>
         </tr>
         <tr>
-            <td><input type="button" class="operator" id="clear" name="clear" value="C" onclick="calculator.display.value = ''"></td>
-            <td><input type="button" class="operator" name="zero" value="0" onclick="calculator.display.value += '0'"></td>
-            <td><input type="button" class="operator" name="doit" value="=" onclick="calculator.display.value = eval(calculator.display.value)"></td>
-            <td><input type="button" class="operator" name="div" value="/" onclick="calculator.display.value += '/'"></td>
+            <td><input type="button" value="C" onclick="display.value = ''"></td>
+            <td><input type="button" value="0" onclick="display.value += '0'"></td>
+            <td><input type="button" value="=" onclick="display.value = eval(display.value)"></td>
+            <td><input type="button" value="/" onclick="display.value += '/'"></td>
         </tr>
     </table>
 </form>
