--- a/su kien chuot/chuot.html
+++ b/su kien chuot/chuot.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <form>
-    <img id="myImage" src="http://t0.gstatic.com/images?q=tbn:ANd9GcRveGXQqRJdH-bTr0IpmGf_PQ3gl9MsPK39t-gU_BXbMP74VUNFf3WROp2_Vh_EqK5wjeYxrQ2oPkxlsK8np3s" height="200px" width="200px"/>
+    <img id="myImage" src="http://t0.gstatic.com/images?q=tbn:ANd9GcRveGXQqRJdH-bTr0IpmGf_PQ3gl9MsPK39t-gU_BXbMP74VUNFf3WROp2_Vh_EqK5wjeYxrQ2oPkxlsK8np3s"
+         height="200px" width="200px"/>
     <p>Clich here to move the ball</p>
     <input type="button" value="right" onclick="moveright();" />
     <input type="button" value="left" onclick="moveleft();" />
