--- a/puzzle/puzzle.html
+++ b/puzzle/puzzle.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Game Puzzle</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Title</title>
+    <link rel="stylesheet" href="aaa.css">
 </head>
 <body>
 <div id="dip">
@@ -15,9 +15,9 @@
 </div>
 
 <script>
-    /*Gọi hàm thay đổi hình ảnh*/
+
     function changeImages(row,iD) {
-        var num = parseInt(document.getElementById(iD).name);
+        var num = parseInt(document.getElementById(iD).name);// gán 1 số num lấy giá trị name của theo iD ảnh
         if (num != 3){
             num = num + 1;
 
